Do not show native modal dialog